--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
+  font-family: "Poppins";
 }
 
 .kotak {
@@ -26,4 +33,12 @@ body {
   background-color: tomato;
   display: block;
   margin: auto;
+}
+
+section.section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
